--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Wrapper {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  max-height: 200px;
+  background-color: #f8f9fa;
 }
 
-.App-link {
-  color: #61dafb;
+.Inserts {
+  display: inline-block;
+  margin: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Button {
+  margin-bottom: 10px;
+}
+.ListContainer {
+  background-color: #dee2e6;
+  height: 150px;
+  width: 150px;
+  overflow: scroll;
+}
+
+.ListCounter {
+  color: #3f51b5;
+  margin-right: 5px;
+}
+
+.ListItem:hover {
+  background-color: #adb5bd;
+}
+
+.Results {
+  display: inline-block;
 }
